2014-08-27  Guozhi Wei  <carrot@google.com>

	PR target/62262
	* config/aarch64/aarch64.md (*andim_ashift<mode>_bfiz): Check the shift
	amount before using it.

2014-08-26  Joel Sherrill <joel.sherrill@oarcorp.com>

	* doc/invoke.texi: -fno-cxa-atexit should be -fno-use-cxa-atexit.

2014-08-26  Marek Polacek  <polacek@redhat.com>

	Backport from mainline
	2014-08-26  Marek Polacek  <polacek@redhat.com>

	PR c/61271
	* tree-vectorizer.h (LOOP_REQUIRES_VERSIONING_FOR_ALIGNMENT,
	LOOP_REQUIRES_VERSIONING_FOR_ALIAS): Wrap in parens.

2014-08-24  Oleg Endo  <olegendo@gcc.gnu.org>

	Backport from mainline
	2014-08-24  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/61996
	* config/sh/sh.opt (musermode): Allow negative form.
	* config/sh/sh.c (sh_option_override): Disable TARGET_USERMODE for
	targets that don't support it.
	* doc/invoke.texi (SH Options): Rename sh-*-linux* to sh*-*-linux*.
	Document -mno-usermode option.

2014-08-23  John David Anglin  <danglin@gcc.gnu.org>

	PR target/62038
	* config/pa/pa.c (pa_output_function_epilogue): Don't set
	last_address when the current function is a thunk.
	(pa_asm_output_mi_thunk): When we don't have named sections or they
	are not being used, check that thunk can reach the stub table with a
	short branch.

2014-08-22  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2014-08-22  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/62195
	* doc/md.texi (Machine Constraints): Update PowerPC wi constraint
	documentation to state it is only for VSX operations.

	* config/rs6000/rs6000.c (rs6000_init_hard_regno_mode_ok): Make wi
	constraint only active if VSX.

	* config/rs6000/rs6000.md (lfiwax): Use wj constraint instead of
	wi cosntraint for ISA 2.07 lxsiwax/lxsiwzx instructions.
	(lfiwzx): Likewise.

2014-08-21  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2014-08-19  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.md (*ctz<mode>2_falsedep_1): Don't clear